# manifold_reconstructor_Piazza

./: .gitignore  CMakeLists.txt
include/manifoldReconstructor/: CameraPointsCollection.h  ConfigParser.h  ManifoldManager.h  ORBIncrementalParser.h  ORBParser.h  OutputManager.h  Ray.hpp  ReconstructFromSLAMData.h  ReconstructFromSfMData.h  SfMData.h  TriangulationManager.h  types_reconstructor.hpp  utilities.hpp
include/test/: OpenMvgParser.h
src/: CameraPointsCollection.cpp  Delaunay3DCellInfo.cpp  Delaunay3DVertexInfo.cpp  ManifoldManager.cpp  OutputManager.cpp  ReconstructFromSLAMData.cpp  ReconstructFromSfMData.cpp  TriangulationManager.cpp
src/cam_parsers/: ConfigParser.cpp  ORBIncrementalParser.cpp  ORBParser.cpp
src/utilities/: Chronometer.cpp  Logger.cpp  utilities.cpp
test/: Main.cpp  OpenMvgParser.cpp
